--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "start": "node",
+    "dev": "nodemon src/index.js ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^7.5.3",
+    "mongoose-paginate-v2": "^1.7.4",
     "nanoid": "^4.0.2",
     "socket.io": "^4.7.2"
   },
