--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.5.3",
+    "mongoose": "^7.6.3",
     "mongoose-paginate-v2": "^1.7.4",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
