implementacion de logger y correcion de mocking y manejo de erroress

--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
 PORT= 8080
-MONGO_URI = "mongodb://127.0.0.1:27017"
-MONGO_DB_NAME = "ecommerce"
- GITHUB_CLIENT_ID =  'Iv1.96e558afbecdaef1',
- GITHUB_CLIENT_SECRET = ' 38ed40761aa93cfe5003141482b0b0c65d9a2681',
-GITHUB_CALLBACK_URL = 'http://localhost:8080/session/githubcallback'
+MONGO_URI = mongodb://127.0.0.1:27017
+MONGO_DB_NAME = ecommerce
+ GITHUB_CLIENT_ID =  Iv1.96e558afbecdaef1
+ GITHUB_CLIENT_SECRET =  38ed40761aa93cfe5003141482b0b0c65d9a2681
+GITHUB_CALLBACK_URL = http://localhost:8080/session/githubcallback
+NODEMAILER_USER= flor90200@gmail.com
+NODEMAILER_PASS= pctdlbdscjxwogqy
+TWILIO_PHONE_NUMBER=+12055610511
+TWILIO_ACCOUNT_SID=AC34749b60df6bff399f652bcc10f4b658
+TWILIO_AUTH_TOKEN=ced8eaec18fc9a8e57f88a306934d469
+ENVIRONMENT=PROD
