--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "socket.io": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "sweetalert2": "^11.10.2",
     "twilio": "^4.19.0",
@@ -42,9 +43,9 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "chai": "^5.0.0",
     "mocha": "^10.2.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
 }
